--- a/s11-hangman/src/Hangman.css
+++ b/s11-hangman/src/Hangman.css
@@ -8,6 +8,7 @@
 .Hangman img {
   border: 10px solid white;
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.27), 0 0 40px rgba(0, 0, 0, 0.06) inset;
+  height: 270px;
 }
 
 .Hangman h1 {
