changes after colt's solution

--- a/s14-color-box-maker/src/NewBoxForm.css
+++ b/s14-color-box-maker/src/NewBoxForm.css
@@ -1,3 +1,8 @@
+.NewBoxForm {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 .NewBoxForm label {
-  display: block;
+  margin: 20px;
 }
