--- a/s15-todo-list/src/Task.css
+++ b/s15-todo-list/src/Task.css
@@ -1,7 +1,66 @@
-.Task span {
-  cursor: pointer;
+.Task {
+  background-color: azure;
+  border-bottom: 1px dashed lightseagreen;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
 
 .Task .crossed {
   text-decoration: line-through;
+  color: #94d4d4;
+}
+.Task-text {
+  color: #173030;
+  font-weight: bold;
+  cursor: pointer;
+  text-align: center;
+  width: 82%;
+  min-height: 50px;
+  transition: color 0.5s;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.Task-text:hover {
+  color: #94d4d4;
+}
+
+.Task-icons {
+  width: 18%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+
+.Task-icon {
+  font-size: 1.2rem;
+  cursor: pointer;
+}
+
+.Task-icon:hover {
+  color: slategrey;
+}
+
+.fa-trash-alt:not(:hover) {
+  color: maroon;
+}
+
+.fa-edit:not(:hover) {
+  color: sandybrown;
+}
+
+.fa-save:not(:hover) {
+  color: steelblue;
+}
+
+.Task input {
+  text-align: center;
+  height: 50px;
+  width: 100%;
+  border: none;
+  padding: 0;
+  background-color: azure;
 }
