--- a/s16-yahtzee/src/Die.css
+++ b/s16-yahtzee/src/Die.css
@@ -1,18 +1,7 @@
-/* Original Styles For Numbers, before icons added in */
-.Die {
-  font-size: 25px;
-  display: inline-block;
-  padding: 0.5em 0.8em;
-  font-family: monospace;
-  font-weight: bold;
-  background-color: black;
-  color: white;
-  margin-right: 1em;
-}
-
 /* THE NICER STYLES MADE FOR THE FONT-AWESOME ICONS... */
 
-/* .Die {
+.Die {
+  font-size: 4em;
   color: white;
   text-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.1);
   transition: all 0.3s ease;
@@ -43,4 +32,4 @@
   100% {
     transform: rotate(360deg);
   }
-} */
+}
