--- a/s18-deck-of-cards/src/index.css
+++ b/s18-deck-of-cards/src/index.css
@@ -1,4 +1,7 @@
+@import url('https://fonts.googleapis.com/css?family=Slabo+27px&display=swap');
+
 body {
   margin: 0;
   padding: 0;
+  font-family: 'Slabo 27px', serif;
 }
