--- a/s19-dad-jokes/src/Header.css
+++ b/s19-dad-jokes/src/Header.css
@@ -1,10 +1,12 @@
 .Header {
+  background-color: violet;
   width: 30%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   text-align: center;
+  font-family: 'Mali', cursive;
 }
 
 .Header-button {
