--- a/s19-dad-jokes/src/index.css
+++ b/s19-dad-jokes/src/index.css
@@ -1,6 +1,6 @@
-@import url('https://fonts.googleapis.com/css?family=Pacifico&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Mali|Raleway&display=swap');
+
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Pacifico', cursive;
 }
