css mostly acceptable

--- a/s19-dad-jokes/src/Joke.css
+++ b/s19-dad-jokes/src/Joke.css
@@ -1,7 +1,8 @@
 .Joke {
-  margin: 1em;
+  padding: 0.5em 1em;
   display: flex;
   align-items: center;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
   /* justify-content: flex-start; */
 }
 
