--- a/s19-dad-jokes/src/Header.css
+++ b/s19-dad-jokes/src/Header.css
@@ -1,5 +1,5 @@
 .Header {
-  background-color: violet;
+  background-color: #8b69c6;
   width: 30%;
   display: flex;
   flex-direction: column;
@@ -7,13 +7,14 @@
   justify-content: center;
   text-align: center;
   font-family: 'Mali', cursive;
+  box-shadow: 0 8px 6px -6px black;
 }
 
 .Header-button {
   margin: 0.67em 0;
   outline: none;
   border: none;
-  background-color: blue;
+  background-color: #2fbaff;
   padding: 1em;
   color: white;
   font-size: 1.2em;
@@ -21,11 +22,17 @@
   text-transform: uppercase;
   border-radius: 1em;
   font-family: inherit;
+  box-shadow: 0 8px 6px -6px black;
+}
+
+.Header-title {
+  color: white;
 }
 
 .Header-button:hover {
   cursor: pointer;
-  background-color: lightblue;
+  color: #2fbaff;
+  background-color: white;
 }
 
 .Header-button[disabled] {
@@ -34,6 +41,8 @@
 }
 
 .Header-icon {
+  box-shadow: 0 -8px 6px -6px black;
+
   border-radius: 50%;
   font-size: 5em;
   /* text-shadow: 0 0 0.2em black; */
