--- a/s19-dad-jokes/src/JokeList.css
+++ b/s19-dad-jokes/src/JokeList.css
@@ -1,9 +1,10 @@
 .JokeList {
   width: 100%;
-  background-color: lightcyan;
+  background-color: white;
   overflow-y: auto;
   padding-right: 17px;
   margin: 2em 0;
   font-size: 0.9em;
   font-family: 'Raleway', sans-serif;
+  box-shadow: 0 8px 6px -6px black;
 }
