shadows for ratings

--- a/s19-dad-jokes/src/Joke.css
+++ b/s19-dad-jokes/src/Joke.css
@@ -33,6 +33,7 @@
   border-radius: 50%;
   text-align: center;
   background-color: white;
+  box-shadow: 4px 5px 19px -5px rgba(0, 0, 0, 0.45);
 }
 
 .Joke-rating-inside {
