--- a/s19-dad-jokes/src/Header.css
+++ b/s19-dad-jokes/src/Header.css
@@ -1,6 +1,7 @@
 .Header {
   background-color: #8b69c6;
-  width: 30%;
+  width: 260px;
+  height: 600px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -38,12 +39,13 @@
 .Header-button[disabled] {
   background-color: grey;
   cursor: not-allowed;
+  color: white;
 }
 
 .Header-icon {
   box-shadow: 0 -8px 6px -6px black;
 
   border-radius: 50%;
-  font-size: 5em;
+  font-size: 8em;
   /* text-shadow: 0 0 0.2em black; */
 }
