--- a/s19-dad-jokes/src/Joke.css
+++ b/s19-dad-jokes/src/Joke.css
@@ -3,11 +3,15 @@
   display: flex;
   align-items: center;
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-  /* justify-content: flex-start; */
+  text-align: start;
+}
+
+.Joke-text {
+  /* text-align: center; */
 }
 
 .Joke-left {
-  width: 100px;
+  min-width: 100px;
 }
 
 .Joke-arrow {
@@ -19,7 +23,6 @@
 }
 
 .Joke-arrow:hover {
-  /* transform: translate(-1px, -1px); */
   color: black;
   cursor: pointer;
 }
@@ -34,18 +37,11 @@
   text-align: center;
   background-color: white;
   box-shadow: 4px 5px 19px -5px rgba(0, 0, 0, 0.45);
-}
-
-.Joke-rating-inside {
-}
-
-.Joke-text {
-  /* vertical-align: middle; */
+  font-weight: bold;
 }
 
 .Joke-emoji {
   font-size: 2em;
-  /* vertical-align: middle; */
   margin-left: auto;
   margin-right: 0;
   justify-self: flex-end;
@@ -55,4 +51,14 @@
 .Joke-emoji:hover {
   transform: rotate(360deg);
   cursor: default;
+}
+
+.Joke-emoji-roll {
+  animation: spin 1s infinite;
+}
+
+@keyframes spin {
+  100% {
+    transform: rotate(360deg);
+  }
 }
