--- a/s19-dad-jokes/src/JokeList.css
+++ b/s19-dad-jokes/src/JokeList.css
@@ -1,8 +1,11 @@
 .JokeList {
-  width: 100%;
+  width: 800px;
+  height: 550px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
   background-color: white;
   overflow-y: auto;
-  padding-right: 17px;
   margin: 2em 0;
   font-size: 0.9em;
   font-family: 'Raleway', sans-serif;
