--- a/s23-dogs/src/Dog.css
+++ b/s23-dogs/src/Dog.css
@@ -1,4 +1,66 @@
+.Dog {
+  align-self: center;
+  margin: 2em 0 auto 0;
+  display: flex;
+  flex-direction: column;
+  background-color: rgb(250, 253, 255);
+  box-shadow: 10px 10px 50px -15px rgba(0, 0, 0, 0.2);
+  width: 40em;
+}
+
 .Dog-img {
-  max-height: 30em;
-  max-width: 50em;
+  height: 40em;
+  width: 100%;
+  object-fit: cover;
+}
+
+.Dog-description {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.Dog-description-left {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.Dog-name {
+  margin-bottom: 0;
+  padding-left: 0;
+  font-weight: 200;
+}
+.Dog-age {
+  margin-top: 0;
+  padding-left: 0;
+}
+
+.Dog-facts {
+  text-align: left;
+  list-style-type: none;
+  padding: 0;
+}
+
+.Dog-fact {
+  padding: 0.3em 0;
+  border-bottom: 1px dashed grey;
+}
+
+.Dog-button {
+  padding: 1em;
+  background: rgb(255, 208, 0);
+  font-family: inherit;
+  border: none;
+  outline: none;
+  font-weight: bold;
+  text-transform: uppercase;
+  cursor: pointer;
+  transition: all 0.05s linear;
+}
+
+.Dog-button:hover {
+  transform: scale(1.05);
 }
