--- a/s23-dogs/src/Dogs.css
+++ b/s23-dogs/src/Dogs.css
@@ -27,9 +27,9 @@
   color: rgb(88, 88, 88);
   font-weight: 200;
   font-size: 5em;
-  margin: 0.5em 0 0 0;
-  padding: 0 0 0.2em 0;
-  border-bottom: 1px solid rgb(255, 208, 0);
+  margin: 0;
+  padding: 0.2em 0;
+  border-bottom: 3px solid rgb(255, 208, 0);
 }
 
 .Dogs a {
