--- a/s24-colors-app/src/ColorBox.css
+++ b/s24-colors-app/src/ColorBox.css
@@ -67,10 +67,10 @@
 .ColorBox-overlay-text {
   position: fixed;
   top: 40%;
-  left: 0;
+  left: -200%;
   text-align: center;
   color: white;
-  width: 100%;
+  width: 500%;
   z-index: 0;
   opacity: 0;
   transform: scale(0.1);
