--- a/s24-colors-app/src/ColorBox.css
+++ b/s24-colors-app/src/ColorBox.css
@@ -46,6 +46,7 @@
   background-color: rgba(255, 255, 255, 0.25);
   padding: 0.3rem;
   font-size: 0.8rem;
+  text-decoration: none;
 }
 
 .ColorBox-overlay-bg {
