better single color logic and css

--- a/s24-colors-app/src/ColorBox.css
+++ b/s24-colors-app/src/ColorBox.css
@@ -1,9 +1,17 @@
 .ColorBox {
-  width: 20%;
-  height: 25%;
   cursor: pointer;
   position: relative;
   text-transform: uppercase;
+}
+
+.ColorBox.fiveByFour {
+  width: 20%;
+  height: 25%;
+}
+
+.ColorBox.sixByTwo {
+  width: 16.6666666666666666666666%;
+  height: 50%;
 }
 
 .ColorBox-copy {
