--- a/s23-dogs/src/Dogs.css
+++ b/s23-dogs/src/Dogs.css
@@ -1,7 +1,7 @@
 .Dogs {
   display: flex;
   flex-direction: column;
-  height: 100%;
+  min-height: 95vh;
   justify-content: space-between;
 }
 
@@ -15,7 +15,7 @@
 .Dogs-img {
   margin-top: 1em;
   max-height: 30em;
-  max-width: 85%;
+  max-width: 90vw;
   box-shadow: 10px 10px 50px -15px rgba(0, 0, 0, 0.2);
   transition: all 0.5s ease;
   filter: grayscale();
@@ -37,10 +37,6 @@
 
 .Dogs a {
   text-decoration: none;
-}
-
-.Dogs-dog:hover a {
-  /* text-decoration: underline; */
 }
 
 .Dogs-dogname {
