--- a/s19-dad-jokes/src/index.css
+++ b/s19-dad-jokes/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Mali|Raleway&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Libre+Baskerville|Mali|Raleway&display=swap');
 
 body {
   margin: 0;
