tweaks for mobile

--- a/s19-dad-jokes/src/DadJokes.css
+++ b/s19-dad-jokes/src/DadJokes.css
@@ -5,3 +5,11 @@
   display: flex;
   overflow: visible;
 }
+
+@media (max-width: 992px) {
+  .DadJokes {
+    flex-direction: column;
+    max-width: 95vw;
+    max-height: 95vh;
+  }
+}
