--- a/s19-dad-jokes/src/Header.css
+++ b/s19-dad-jokes/src/Header.css
@@ -63,6 +63,33 @@
   animation: wobble 0.6s ease infinite;
 }
 
+@media (max-width: 992px) {
+  .Header {
+    flex-direction: row;
+    justify-content: space-evenly;
+    width: 100%;
+    height: auto;
+  }
+
+  .Header-icon {
+    height: 6em;
+    margin: 0;
+  }
+}
+
+@media (max-width: 768px) {
+  .Header-title {
+    font-size: 1.5rem;
+  }
+  .Header-button {
+    padding: 0.3rem;
+    font-size: 0.8rem;
+  }
+  .Header-icon {
+    padding: 0.8rem;
+  }
+}
+
 @keyframes wobble {
   0% {
     -webkit-transform: translate(3px, 2px) rotate(0deg);
