--- a/s15-todo-list/src/index.css
+++ b/s15-todo-list/src/index.css
@@ -2,7 +2,7 @@
 
 body {
   background-image: url(bg.svg);
-  /* background-size: 600px; */
+  /* background by SVGBackgrounds.com */
   font-family: 'IBM Plex Sans', sans-serif;
   display: flex;
   justify-content: center;
