--- a/s15-todo-list/src/TaskList.css
+++ b/s15-todo-list/src/TaskList.css
@@ -1,8 +1,15 @@
 .TaskList {
+  margin:auto;
   text-align: center;
   background-color: teal;
   width: 500px;
   box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
+}
+
+@media (max-width: 576px) {
+  .TaskList {
+  width: 95%
+  }
 }
 
 .TaskList-title {
