--- a/s15-todo-list/src/index.css
+++ b/s15-todo-list/src/index.css
@@ -2,10 +2,16 @@
 
 body {
   background-image: url(bg.svg);
+  background-size:cover;
   /* background by SVGBackgrounds.com */
   font-family: 'IBM Plex Sans', sans-serif;
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
+  overflow:hidden;
+}
+
+#root {
+  width:100%;
 }
