--- a/s16-yahtzee/src/Game.css
+++ b/s16-yahtzee/src/Game.css
@@ -1,14 +1,25 @@
 .Game {
-  width: 30%;
-  min-width: 500px;
+  margin: 2rem auto;
+  width: 600px;
+  max-width: 95vw;
   background: white;
   box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.1);
-  margin: 0 30%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
+
+.Game-title {
+  margin-top: 1rem;
+  color: white;
+  margin-bottom: 0;
+  font-weight: 100;
+  display: inline-block;
+  font-size: 5rem;
+  /* width: 50%; */
+}
+
 h2 {
   font-weight: 100;
   font-size: 2em;
@@ -39,6 +50,7 @@ h2 {
   border-radius: 0.5rem;
   border: none;
   width: 50%;
+  margin: 1.4rem;
 
   margin-bottom: 2rem;
 }
