--- a/s12-lights-out/src/Board.css
+++ b/s12-lights-out/src/Board.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Monoton&display=swap');
 
 .Board {
-  height: 100vh;
+  height: 80vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -18,6 +18,12 @@
   color: #fff;
   padding: 0 20px 0 20px;
   font-family: Monoton;
+}
+
+@media (max-width: 576px) {
+  .Board-title {
+    font-size: 1.4em;
+  }
 }
 
 .Board-red {
