--- a/s12-lights-out/src/Cell.css
+++ b/s12-lights-out/src/Cell.css
@@ -6,6 +6,13 @@
   border-radius: 3px;
 }
 
+@media (max-width: 576px) {
+  .Cell {
+    height: 50px;
+    width: 50px;
+  }
+}
+
 .Cell-lit {
   background-color: #fcebf5;
 }
