--- a/s15-todo-list/src/index.css
+++ b/s15-todo-list/src/index.css
@@ -1,16 +1,22 @@
 @import url('https://fonts.googleapis.com/css?family=IBM+Plex+Sans:100,100i,400,400i,700,700i&display=swap');
 
 body {
-  background-image: url(bg.svg);
-  background-size: cover;
-  /* background by SVGBackgrounds.com */
   font-family: 'IBM Plex Sans', sans-serif;
   display: flex;
   justify-content: center;
   align-items: flex-start;
-  height: 100vh;
   margin: 0;
   padding: 0;
+}
+
+#bg {
+  height: 100vh;
+  width: 100vw;
+  position: fixed;
+  z-index: -1;
+  background-image: url(bg.svg);
+  background-size: cover;
+  /* background by SVGBackgrounds.com */
 }
 
 #root {
